--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    overflow: hidden;
+}
 .background {
   position: absolute;
   left: 0;
@@ -17,6 +20,17 @@
   width: 200px;
   object-fit: cover;
   object-position: 0px;
+}
+.enemy {
+  position: absolute;
+  bottom: 250px;
+  left: 500px;
+  height: 100px;
+  /* border: 5px solid black; */
+  width: 100px;
+  object-fit: cover;
+  object-position: 0px;
+  transform: scaleX(-1);
 }
 .button {
     position: absolute;
